--- a/template.html
+++ b/template.html
@@ -9,17 +9,18 @@
   <h1>📘 Manual do Projeto</h1>
   {{CONTEUDO}}
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.toggle-text').forEach(el => {
-        el.addEventListener('click', () => {
-          const detalhes = el.nextElementSibling;
-          if (!detalhes) return;
+ <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    document.querySelectorAll('.toggle-text').forEach(el => {
+      el.addEventListener('click', () => {
+        const parent = el.parentElement;
+        const detalhes = parent.querySelector('.detalhes');
+        if (detalhes) {
           detalhes.style.display = detalhes.style.display === 'block' ? 'none' : 'block';
-        });
+        }
       });
     });
-  </script>
+  });
+</script>
 </body>
 </html>
-  
